fixed background image not showing

--- a/css/style.css
+++ b/css/style.css
@@ -5,7 +5,7 @@ body {
 	/*height: 97vh;*/
     max-width: 100%;
     max-height: 100%;
-    background-image: url('img/nature.jpg');
+    background-image: url('../img/nature1.jpg');
     background-size: cover;
     background-position-x: center;
     background-position-y: center;
